@@ -13,7 +13,12 @@ image="${DOCKER_REGISTRY}${DOCKER_USER}/${repo}:${DOCKER_TAG}"
 
 if .run/start.sh "${image}" "${container}"; then exit; fi
 
-docker run --name "${container}" \
-	--network "${DOCKER_USER}-net" \
+XMS="${XMS:-256m}"
+XMX="${XMX:-2g}"
+
+docker container run --name "${container}" \
+	-e DOCKER_USER="${DOCKER_USER}" \
+	-e JAVA_OPTS="-Xms${XMS} -Xmx${XMX} -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseParNewGC -XX:NewRatio=2 -XX:+AggressiveOpts" \
+	--network "${DOCKER_USER}" \
 	"$@" \
 	-d "${image}"
